detail view converted

--- a/app/index.html
+++ b/app/index.html
@@ -29,30 +29,32 @@
               </td>
               <td>{{project.description}}</td>
               <td>
-                <a href=""><i class="icon-pencil"></i></a>
+                <a href="" ng-click="showDetail(project.id)"><i class="icon-pencil"></i></a>
               </td>
             </tr>
           </tbody>
         </table>
 
 
-        <form name="myForm" ng-switch-when="detail">
+        <form name="myForm"
+              ng-switch-when="detail"
+              ng-controller="ProjectDetailController">
           <div class="control-group">
             <label>Name</label>
-            <input type="text" name="name">
+            <input type="text" name="name" ng-model="project.name">
           </div>
 
           <div class="control-group">
             <label>Website</label>
-            <input type="url" name="site">
+            <input type="url" name="site" ng-model="project.url">
           </div>
 
           <label>Description</label>
-          <textarea name="description"></textarea>
+          <textarea name="description" ng-model="project.description"></textarea>
 
           <br>
-          <a href="#/" class="btn">Cancel</a>
-          <button class="btn btn-primary">Save</button>
+          <a href="#/" ng-click="showList()" class="btn">Cancel</a>
+          <button ng-click="saveDetail()" class="btn btn-primary">Save</button>
           <button class="btn btn-danger">Delete</button>
         </form>
 
