step3: AngularJS coding demo

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div class="hero-unit" ng-view></div>
+    <div class="hero-unit" ng-view ng-class="viewSlideAnimation"></div>
 
     <script src="components/jquery/jquery.js"></script>
     <script src="components/angular/angular.js"></script>
