--- a/app/ProjectList.html
+++ b/app/ProjectList.html
@@ -1,4 +1,5 @@
 <div>
+  <input ng-model="search">
   <table>
     <thead>
       <tr>
@@ -12,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="project in list.projects | filter:search">
+      <tr ng-repeat="project in list.projects | filter:search" class="slide">
         <td>
           <a href="{{project.url}}" target="_blank">{{project.name}}</a>
         </td>
