--- a/app/ProjectList.html
+++ b/app/ProjectList.html
@@ -2,27 +2,26 @@
   <input ng-model="search">
   <table>
     <thead>
-    <tr>
-      <th>Project</th>
-      <th>Description</th>
-      <th>
-        <a href="#/project/">
-          <i class="icon-plus-sign"></i>
-        </a>
-      </th>
-    </tr>
+      <tr>
+        <th>Project</th>
+        <th>Description</th>
+        <th>
+          <a href="#/project/">
+            <i class="icon-plus-sign"></i>
+          </a>
+        </th>
+      </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="project in list.projects | filter:search"
-        ng-animate=" 'slide' ">
-      <td>
-        <a href="{{project.url}}" target="_blank">{{project.name}}</a>
-      </td>
-      <td>{{project.description}}</td>
-      <td>
-        <a href="#/project/{{project.id}}"><i class="icon-pencil"></i></a>
-      </td>
-    </tr>
+      <tr ng-repeat="project in list.projects | filter:search" class="slide">
+        <td>
+          <a href="{{project.url}}" target="_blank">{{project.name}}</a>
+        </td>
+        <td>{{project.description}}</td>
+        <td>
+          <a href="#/project/{{project.id}}"><i class="icon-pencil"></i></a>
+        </td>
+      </tr>
     </tbody>
   </table>
 </div>
