--- a/app/index.html
+++ b/app/index.html
@@ -8,11 +8,15 @@
   </head>
   <body>
 
-    <div class="hero-unit" ng-view
-         ng-animate=" viewSlideAnimation "></div>
+    <div class="center">
+      <div class="hero-unit" ng-view
+           xng-class=" viewSlideAnimation "></div>
+    </div>
 
     <script src="components/jquery/jquery.js"></script>
     <script src="components/angular/angular.js"></script>
+    <script src="components/angular-animate/angular-animate.js"></script>
+    <script src="components/angular-route/angular-route.js"></script>
     <script src="components/angular-resource/angular-resource.js"></script>
 
     <!-- build:js scripts/main.js -->
