fix bugs to make animations work as expected

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,7 @@
   <body>
 
     <div class="center">
-      <div class="hero-unit" ng-view
-           xng-class=" viewSlideAnimation "></div>
+      <div class="hero-unit" ng-view ng-class=" viewSlideAnimation "></div>
     </div>
 
     <script src="components/jquery/jquery.js"></script>
